--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
-    <link rel="stylesheet" href="css/login.css" />
+    <link rel="stylesheet" href="./css/login.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
     crossorigin="anonymous" />
@@ -67,7 +67,7 @@
               <div class="heading">
                 <h2>Đăng ký</h2>
                 <h6>Bạn đã có tài khoản?</h6>
-                <a href="#" class="toggle">Đăng ký</a>
+                <a href="#" class="toggle">Đăng nhập</a>
               </div>
 
               <div class="actual-form">
