--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
                   <label>Mật khẩu</label>
                 </div>
 
-                <input type="submit" value="Sign In" class="sign-btn" />
+                <input type="submit" value="Đăng nhập" class="sign-btn" />
 
                 <p class="text">
                   Quên mật khẩu?
